testcases/bad/templates/namespaced-filters-community-misspelled-ns1.j2
# https://github.com/semaphor-dk/dansabel/issues/20

{{ hash_files|zip(query("file","hash_files"))|communityx.general.dict }}
